--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.6.0
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
 cloudinary==1.30.0
+crispy-bootstrap5==0.7
 dj-database-url==1.2.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.16
 django-allauth==0.52.0
+django-crispy-forms==1.14.0
 gunicorn==20.1.0
 oauthlib==3.2.2
 psycopg2==2.9.5
